# REPS

./: LICENSE  README.md  pyproject.toml
eval_data/: eval_arc.jsonl  eval_drop.jsonl  eval_strategy_qa.jsonl
src/: cot_generation.py  eval.py  reps.py  reward_training.py
src/config/: model_config.yaml
src/config/datasets/: arc.yaml  drop.yaml  strategy_qa.yaml
src/models/: model.py
src/output/: arc_cot_results.jsonl  arc_cot_results_evaluated_results.jsonl  drop_cot_results.jsonl  drop_cot_results_evaluated_results.jsonl  strategy_qa_cot_results.jsonl  strategy_qa_cot_results_evaluated_results.jsonl
src/prompts/: __init__.py  base.py
src/prompts/cot_generation/: arc.py  drop.py  strategy_qa.py
src/prompts/self_evaluation/: arc.py  drop.py  strategy_qa.py
src/scripts/: run_cot.sh  run_eval.sh  run_reward_model.sh  run_self_eval.sh
src/utils/: config.py  io.py
